--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-div {
+.box {
     display: flex;
     margin: 10px;
     padding: 20px;
@@ -7,7 +7,7 @@ div {
     
 }
 
-p {
+.b1 {
     background-color: blue;
     width: 50px;
     height: 50px;
@@ -19,7 +19,7 @@ p {
 
 }
 
-h3 {
+.c3 {
     background-color: purple;
     width: 50px;
     height: 50px;
